Fix search bucket content alignment
Fix the horizontal alignment of search result bucket contents on small
screens.

There was a 130px left margin inside the search result bucket contents
which, on small screens, takes up most of the screen width and squashes
the actual contents into a small space.

Make this margin disappear on small screens.

--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -165,6 +165,7 @@
 
   .search-result-bucket__annotation-cards-container {
     flex-direction: column;
+    padding-left: 0;
   }
 
   .search-bucket-stats {
